@@ -7,6 +7,10 @@ export(AmalgamatedArraySeed)
 export(DelayedMask)
 export(ReloadedArray)
 export(ReloadedArraySeed)
+export(altReloadDelayedObject)
+export(altReloadDelayedObjectFunction)
+export(altStoreDelayedObject)
+export(altStoreDelayedObjectFunction)
 export(componentNames)
 export(extractComponents)
 export(loadArray)
